add century gothic font

--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Scaling Up Nutrition</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="navbar-logo">
+                <img src="assets/img/svg/mainLogo.svg" alt="logo"/>
+            </div>
+
+            <ul class="nav-items">
+                <li class="nav-item">
+                    <a href="">TECHNICAL ASSISTANCE MAP</a>
+                </li>
+                <li class="nav-item">
+                    <a href="">REQUEST ASSISTANCE</a>
+                </li>
+                <li class="nav-item">
+                    <a href="">BACK TO MAIN SITE</a>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
     
 </body>
 </html>
