implement global styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="navbar-logo">
-                <img src="assets/img/svg/mainLogo.svg" alt="logo"/>
+            <div class="navbar-brand">
+                <img class="navbar-logo" src="assets/img/svg/mainLogo.svg" alt="logo"/>
             </div>
 
             <ul class="nav-items">
@@ -27,6 +27,20 @@
 
         </nav>
     </header>
+    <main>
+        <div class="home-image">
+        </div>
+        <div class="home-info">
+            <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
+            <p class="home-info-text">Lorem ipsum dolor sit amet, consectetuer adipiscing
+                 elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
+                 aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+
+            <a class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
+            <a class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
+        </div>
+    </main>
     
 </body>
 </html>
