implement home page desktop only

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/home.css" />
     <title>Scaling Up Nutrition</title>
 </head>
 <body>
@@ -27,8 +28,9 @@
 
         </nav>
     </header>
-    <main>
+    <main class="home-main">
         <div class="home-image">
+            d
         </div>
         <div class="home-info">
             <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
@@ -36,9 +38,11 @@
                  elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
                  aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                 sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-
-            <a class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
-            <a class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
+            <div class="home-info-links">
+                <a href="#" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
+                <a href="#" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
+            </div>
+           
         </div>
     </main>
     
