--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="assets/css/home.css" />
     <title>Scaling Up Nutrition</title>
 </head>
-<body>
+<body tabindex="-1">
     <header>
-        <nav class="navbar">
+        <nav class="navbar" aria-label="Main Navigation">
             <div class="navbar-brand">
                 <img class="navbar-logo" src="assets/img/svg/mainLogo.svg" alt="logo"/>
             </div>
@@ -24,6 +24,17 @@
                 <li class="nav-item">
                     <a href="">BACK TO MAIN SITE</a>
                 </li>
+                <li class="nav-item navbar-dropdown">
+                    <!-- aria-expanded needs managed with Javascript -->
+                    <button type="button" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
+                      EN
+                    </button>
+                    <ul class="dropdown-menu" id="langDropdown">
+                      <li><a href="#">EN-US</a></li>
+                      <li><a href="#">FR</a></li>
+                      <li><a href="#">ES</a></li>
+                    </ul>
+                  </li>
             </ul>
 
         </nav>
@@ -45,6 +56,7 @@
            
         </div>
     </main>
-    
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
