implement base styles for assistance page

--- a/maps/index.html
+++ b/maps/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/home.css" />
-    <title>Scaling Up Nutrition</title>
+    <link rel="stylesheet" href="../assets/css/maps.css" />
+    <title>Maps</title>
 </head>
-<body tabindex="-1">
+<body>
     <header>
         <nav class="navbar" aria-label="Main Navigation">
             <div class="navbar-brand">
-                <img class="navbar-logo" src="assets/img/svg/mainLogo.svg" alt="logo"/>
+                <img class="navbar-logo" src="../assets/img/svg/mainLogo.svg" alt="logo"/>
             </div>
 
             <ul class="nav-items">
@@ -38,24 +38,26 @@
 
         </nav>
     </header>
-    <main class="home-main">
-        <div class="home-image">
-            d
-        </div>
-        <div class="home-info">
-            <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
-            <p class="home-info-text">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                 elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                 aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-            <div class="home-info-links">
-                <a href="#" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
-                <a href="#" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
-            </div>
-           
+    <main class="maps-main">
+        <h2 class="maps-title">SELECT A REGION  TO VIEW TECHNICAL REQUESTS</h2>
+        <div class="map-links">
+            <a class="map-link">
+                <img class="map-image" src="../assets/img/svg/africa-small.svg" alt="africa map"/>
+                <h2 class="map-name">AFRICA</h2>
+            </a>
+            <a class="map-link">
+                <img class="map-image" src="../assets/img/svg/asia-small.svg" alt="asia map"/>
+                <h2 class="map-name">ASIA</h2>
+            </a>
+
+            <a class="map-link">
+                <img class="map-image" src="../assets/img/svg/latin-america-small.svg" alt="latin america map"/>
+                <h2 class="map-name">LATIN AMERICA</h2>
+            </a>
+
+
         </div>
     </main>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    
 </body>
 </html>
