implement page links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar" aria-label="Main Navigation">
             <div class="navbar-brand">
-                <img class="navbar-logo" src="assets/img/svg/mainLogo.svg" alt="logo"/>
+              <a href="#"> <img class="navbar-logo" src="assets/img/svg/mainLogo.svg" alt="logo"/></a> 
             </div>
 
             <ul class="nav-items">
@@ -40,7 +40,7 @@
     </header>
     <main class="home-main">
         <div class="home-image">
-            d
+            
         </div>
         <div class="home-info">
             <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
@@ -49,8 +49,8 @@
                  aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                 sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             <div class="home-info-links">
-                <a href="#" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
-                <a href="#" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
+                <a href="/assistance/" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
+                <a href="/maps/" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
             </div>
            
         </div>
