--- a/maps/asia/index.html
+++ b/maps/asia/index.html
@@ -44,13 +44,13 @@
         <nav class="side-nav">
             <ul>
                 <li class="nav-item">
-                    <a class="">AFRICA</a>
+                    <a href="/maps/africa/" >AFRICA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="active">LATIN AMERICA</a>
+                    <a href="/maps/europe/" class="">LATIN AMERICA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="">ASIA</a>
+                    <a href="/maps/asia/" class="active">ASIA</a>
                 </li>
             </ul>
         </nav>
