--- a/maps/index.html
+++ b/maps/index.html
@@ -41,16 +41,16 @@
     <main class="maps-main">
         <h2 class="maps-title">SELECT A REGION  TO VIEW TECHNICAL REQUESTS</h2>
         <div class="map-links">
-            <a class="map-link">
+            <a href="/maps/africa/" class="map-link">
                 <img class="map-image" src="../assets/img/svg/africa-small.svg" alt="africa map"/>
                 <h2 class="map-name">AFRICA</h2>
             </a>
-            <a class="map-link">
+            <a href="/maps/asia/" class="map-link">
                 <img class="map-image" src="../assets/img/svg/asia-small.svg" alt="asia map"/>
                 <h2 class="map-name">ASIA</h2>
             </a>
 
-            <a class="map-link">
+            <a href="/maps/europe/" class="map-link">
                 <img class="map-image" src="../assets/img/svg/latin-america-small.svg" alt="latin america map"/>
                 <h2 class="map-name">LATIN AMERICA</h2>
             </a>
