implement admin slect map page base styles desktop

--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -38,11 +38,11 @@
                   
                         <div class="form-group">
                             <label class="sr-only" for="adminEmail">Email Address</label>
-                            <input name="adminEmail" id="adminEmail" type="text" />
+                            <input name="adminEmail" placeholder="Email Address" id="adminEmail" type="text" />
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="adminPassword">Password</label>
-                            <input name="adminPassword" id="adminPassword" type="text"/>
+                            <input name="adminPassword" placeholder="Password" id="adminPassword" type="password"/>
                         </div>
                         <input type="submit" value="LOGIN" class="submit-btn" />
                 </form>
