implement create user page styles

--- a/admin/maps/index.html
+++ b/admin/maps/index.html
@@ -42,7 +42,7 @@
     <main class="maps-main admin-maps-main">
         <div class="admin-maps-intro">
             <h1 class="admin-maps-welcome">Welcome, Admin 42334</h1>
-            <a href="#" class="create-user-link"></a>
+            <a href="../create-user/" class="create-user-link"></a>
         </div>
         <h2 class="maps-title">SELECT REGION</h2>
         <div class="map-links">
