implement admin africa map

--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -22,7 +22,7 @@
                     <a href="../create-user/">CREATE USER</a>
                 </li>            
                 <li class="nav-item">
-                    <a href="../../">BACK TO MAIN SITE</a>
+                    <a href="../">BACK TO MAIN SITE</a>
                 </li>
                 
             </ul>
