--- a/admin/maps/index.html
+++ b/admin/maps/index.html
@@ -46,7 +46,7 @@
         </div>
         <h2 class="maps-title">SELECT REGION</h2>
         <div class="map-links">
-            <a href="/maps/africa/" class="map-link">
+            <a href="/admin/maps/africa/ class="map-link">
                 <img class="map-image" src="../../assets/img/svg/africa-small.svg" alt="africa map"/>
                 <h2 class="map-name">AFRICA</h2>
             </a>
