implement admin asia map

--- a/admin/maps/asia/index.html
+++ b/admin/maps/asia/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css" />
-    <link rel="stylesheet" href="../../../assets/css/admin.css" />
     <link rel="stylesheet" href="../../../assets/css/data.css" />
+    <link rel="stylesheet" href="../../../assets/css/admin.css" />
     <title>Scaling Up Nutrition</title>
 </head>
 <body tabindex="-1">
@@ -45,16 +45,15 @@
         <nav class="admin side-nav">
             <ul>
                 <li class="nav-item">
-                    <a href="./" class="active">AFRICA</a>
+                    <a href="../africa/" >AFRICA</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../latin-america/" class="">LATIN AMERICA</a>
+                    <a href="./" class="">LATIN AMERICA</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../asia/" class="">ASIA</a>
+                    <a href="../asia/" class="active">ASIA</a>
                 </li>
             </ul>
-            
             <div class="admin-filter">
 
                 <h1 class="filter-title">Request Type</h1>
@@ -116,18 +115,16 @@
             </div>
             
 
-
-
         </nav>
             <div id="container"></div>
     </main>
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/mapdata/custom/africa.js"></script>
+    <script src="https://code.highcharts.com/mapdata/custom/asia.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="../../../assets/js/script.js"></script>
+    <script type="text/javascript" src="../../assets/js/script.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-    <script src="../../../assets/js/adminAfricaConfig.js"></script>
+    <script src="../../../assets/js/adminAsiaConfig.js"></script>
 </body>
 </html>
