--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 </li>
                 <li class="nav-item navbar-dropdown">
                     <!-- aria-expanded needs managed with Javascript -->
-                    <button type="button" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
+                    <button type="button" data-lang="en-gb" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
                       EN
                     </button>
                     <ul class="dropdown-menu" id="langDropdown">
-                      <li><a href="#">EN-US</a></li>
-                      <li><a href="#">FR</a></li>
-                      <li><a href="#">ES</a></li>
+                      <li><a href="#" data-lang="en-us" >EN-US</a></li>
+                      <li><a href="#" data-lang="en-fr" >FR</a></li>
+                      <li><a href="#" data-lang="en-es" >ES</a></li>
                     </ul>
                   </li>
             </ul>
