configure map options for public view

--- a/maps/africa/index.html
+++ b/maps/africa/index.html
@@ -47,7 +47,7 @@
                     <a href="/maps/africa/" class="active">AFRICA</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/maps/europe/" class="">LATIN AMERICA</a>
+                    <a href="/maps/latin-america/" class="">LATIN AMERICA</a>
                 </li>
                 <li class="nav-item">
                     <a href="/maps/asia/" class="">ASIA</a>
