--- a/maps/latin-america/index.html
+++ b/maps/latin-america/index.html
@@ -47,7 +47,7 @@
                     <a href="/maps/africa/" >AFRICA</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/maps/europe/" class="active">LATIN AMERICA</a>
+                    <a href="/maps/latin-america/" class="active">LATIN AMERICA</a>
                 </li>
                 <li class="nav-item">
                     <a href="/maps/asia/" class="">ASIA</a>
@@ -58,11 +58,11 @@
     </main>
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/mapdata/custom/europe.js"></script>
+    <script src="https://code.highcharts.com/mapdata/custom/south-america.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="../../assets/js/script.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-    <script src="../../assets/js/europeConfig.js"></script>
+    <script src="../../assets/js/latinAmericaConfig.js"></script>
 </body>
 </html>
