--- a/admin/create-user/index.html
+++ b/admin/create-user/index.html
@@ -64,6 +64,7 @@
                 </div>
             </div>
 
+            <div class="form-row">
                 <div class="form-group">
                     <label for="userType">User Type</label>
                     <select name="userType" id="userType" type="text">
@@ -71,6 +72,17 @@
                         <option value="1">SUPER ADMIN (Can create other users)</option>
                     </select>
                 </div>
+                <div class="form-group privacy-check">
+                    <label class="control control--checkbox">I agree to the SBN privacy policy
+                        <input type="checkbox"/>
+                        <div class="control__indicator"></div>
+                      </label>
+                      <a class="privacy-link">Click to view privacy policy</a>
+                </div>
+
+            </div>
+
+                
 
             <input type="submit" class="submit-btn" value="create"/>
 
