--- a/admin/create-user/index.html
+++ b/admin/create-user/index.html
@@ -77,7 +77,7 @@
                         <input type="checkbox"/>
                         <div class="control__indicator"></div>
                       </label>
-                      <a class="privacy-link">Click to view privacy policy</a>
+                      <a href="../../privacy-policy/" class="privacy-link">Click to view privacy policy</a>
                 </div>
 
             </div>
