--- a/assistance/index.html
+++ b/assistance/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/assistance.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/assistance.css" />   
     <title>Request Assistance</title>
 </head>
 <body>
@@ -121,10 +122,33 @@
             </div>
 
 
-            <input type="submit" class="submit-btn" />
+            <input type="submit" class="submit-btn" id="assistanceSubmit" />
 
         </form>
     </main>
-    
+    <div class="modal fade" id="successMsg" tabindex="-1" role="dialog" aria-labelledby="important-msg-label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            </div>
+            <div class="modal-body">
+              <h1 class="modal-title">This request is being processed</h1>
+              <p class="modal-text">You would be notified once your request is approved or assigned.</p>
+            </div>           
+          </div>
+        </div>
+      </div>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
+      <script>
+
+
+          $('#assistanceSubmit').click((event)=>{
+              event.preventDefault();
+       $('#successMsg').modal('show');
+       
+          })
+      </script>
 </body>
 </html>
