--- a/admin/maps/africa/index.html
+++ b/admin/maps/africa/index.html
@@ -1,133 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale.css" />
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tippy.js@6/animations/scale.css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css"/>
+    <link rel="stylesheet" href="../../../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../../../assets/css/admin.css" />
     <link rel="stylesheet" href="../../../assets/css/data.css" />
     <title>Scaling Up Nutrition</title>
-</head>
-<body tabindex="-1">
+  </head>
+  <body tabindex="-1">
     <header>
-        <nav class="navbar" aria-label="Main Navigation">
-            <div class="navbar-brand">
-                <img class="navbar-logo" src="../../../assets/img/svg/mainLogo.svg" alt="logo"/>
-            </div>
+      <nav class="navbar" aria-label="Main Navigation">
+        <div class="navbar-brand">
+          <img
+            class="navbar-logo"
+            src="../../../assets/img/svg/mainLogo.svg"
+            alt="logo"
+          />
+        </div>
 
-            <ul class="nav-items">
-                <li class="nav-item">
-                    <a href="">TECHNICAL ASSISTANCE MAP</a>
-                </li>
-                <li class="nav-item">
-                    <a href="">REQUEST ASSISTANCE</a>
-                </li>
-                <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
-                </li>
-                <li class="nav-item navbar-dropdown">
-                    <!-- aria-expanded needs managed with Javascript -->
-                    <button type="button" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
-                      EN
-                    </button>
-                    <ul class="dropdown-menu" id="langDropdown">
-                      <li><a href="#">EN-US</a></li>
-                      <li><a href="#">FR</a></li>
-                      <li><a href="#">ES</a></li>
-                    </ul>
-                  </li>
+        <ul class="nav-items">
+          <li class="nav-item">
+            <a href="">TECHNICAL ASSISTANCE MAP</a>
+          </li>
+          <li class="nav-item">
+            <a href="">REQUEST ASSISTANCE</a>
+          </li>
+          <li class="nav-item">
+            <a href="">BACK TO MAIN SITE</a>
+          </li>
+          <li class="nav-item navbar-dropdown">
+            <!-- aria-expanded needs managed with Javascript -->
+            <button
+              type="button"
+              class="dropbtn"
+              aria-expanded="false"
+              aria-controls="langDropdown"
+            >
+              EN
+            </button>
+            <ul class="dropdown-menu" id="langDropdown">
+              <li><a href="#">EN-US</a></li>
+              <li><a href="#">FR</a></li>
+              <li><a href="#">ES</a></li>
             </ul>
-
-        </nav>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="data-main">
-        <nav class="admin side-nav">
-            <ul>
-                <li class="nav-item">
-                    <a href="./" class="active">AFRICA</a>
-                </li>
-                <li class="nav-item">
-                    <a href="../latin-america/" class="">LATIN AMERICA</a>
-                </li>
-                <li class="nav-item">
-                    <a href="../asia/" class="">ASIA</a>
-                </li>
-            </ul>
-            
-            <div class="admin-filter">
+      <nav class="admin side-nav">
+        <ul>
+          <li class="nav-item">
+            <a href="./" class="active">AFRICA</a>
+          </li>
+          <li class="nav-item">
+            <a href="../latin-america/" class="">LATIN AMERICA</a>
+          </li>
+          <li class="nav-item">
+            <a href="../asia/" class="">ASIA</a>
+          </li>
+        </ul>
 
-                <h1 class="filter-title">Request Type</h1>
-                <div class="check-group">
-                    <label class="control control--checkbox">Fortification
-                        <input type="checkbox"/>
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Product reformulation
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Food safety 
-                        <input type="checkbox" /> 
-                         <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Nutrition labelling
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Affordability
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Financial inclusion
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Marketing
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Other
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                    </div>
+        <div class="admin-filter">
+          <h1 class="filter-title">Request Type</h1>
+          <div class="check-group">
+            <label class="control control--checkbox"
+              >Fortification
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Product reformulation
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Food safety
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Nutrition labelling
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Affordability
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Financial inclusion
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Marketing
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Other
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+          </div>
 
-                    <h1 class="filter-title">Request Status</h1>
-                <div class="check-group">
-                    <label class="control control--checkbox">Ongoing
-                        <input type="checkbox"/>
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Completed
-                        <input type="checkbox" />
-                        <div class="control__indicator"></div>
-                      </label>
-                      <label class="control control--checkbox">Requested
-                        <input type="checkbox" /> 
-                         <div class="control__indicator"></div>
-                      </label>
-                </div>
+          <h1 class="filter-title">Request Status</h1>
+          <div class="check-group">
+            <label class="control control--checkbox"
+              >Ongoing
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Completed
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+            <label class="control control--checkbox"
+              >Requested
+              <input type="checkbox" />
+              <div class="control__indicator"></div>
+            </label>
+          </div>
 
-                <button class="filter-btn">APPLY FILTER</button>
+          <button class="filter-btn">APPLY FILTER</button>
 
-                <button class="reset-btn">Reset filter</button>
-
-            </div>
-            
-
-
-
-        </nav>
-            <div id="container"></div>
+          <button class="reset-btn">Reset filter</button>
+        </div>
+      </nav>
+      <div id="container"></div>
     </main>
+    <div
+      class="modal fade"
+      id="requestModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="important-msg-label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">&times;</span
+              ><span class="sr-only">Close</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="request-header">
+              <div class="company-info">
+                <img
+                  class=""
+                  src="../../../assets/img/svg/popImg1.svg"
+                  alt="logo"
+                />
+                <h2>Company Name</h2>
+              </div>
+              <div class="request-info">
+                <h1 class="request-title">Title of request</h1>
+                <h2>Location</h2>
+              </div>
+            </div>
+            <article class="request-article">
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                aliquip. Lorem ipsum dolor sit amet, consectetuer adipiscing
+                elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                aliquip.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+                nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                aliquip
+              </p>
+            </article>
+            <p class="request-question">Has this request been fully completed?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="action-btn" data-dismiss="modal">
+              Yes
+            </button>
+            <button type="button" class="action-btn">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/mapdata/custom/africa.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.3.min.js"
+    ></script>
     <script type="text/javascript" src="../../../assets/js/script.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
     <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
     <script src="../../../assets/js/adminAfricaConfig.js"></script>
-</body>
+    <script
+      type="text/javascript"
+      src="../../../assets/js/bootstrap.min.js"
+    ></script>
+    <script>
+      $("#createSubmit").click((event) => {
+        event.preventDefault();
+        $("#successMsg").modal("show");
+      });
+    </script>
+  </body>
 </html>
