implement privacy policy page ui updates

--- a/assistance/index.html
+++ b/assistance/index.html
@@ -121,8 +121,17 @@
                                     </textarea>
             </div>
 
-
-            <input type="submit" class="submit-btn" id="assistanceSubmit" />
+            <div class="form-row">
+                <div class="form-group privacy-check">
+                    <label class="control control--checkbox">I agree to the SBN privacy policy
+                        <input type="checkbox"/>
+                        <div class="control__indicator"></div>
+                      </label>
+                      <a href="../../privacy-policy/" class="privacy-link">Click to view privacy policy</a>
+                </div>
+                <input type="submit" class="submit-btn" id="assistanceSubmit" />
+            </div>
+          
 
         </form>
     </main>
