add navbar links for public view change hover color on map states

--- a/maps/index.html
+++ b/maps/index.html
@@ -15,13 +15,13 @@
 
             <ul class="nav-items">
                 <li class="nav-item">
-                    <a href="">TECHNICAL ASSISTANCE MAP</a>
+                    <a href="./">TECHNICAL ASSISTANCE MAP</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">REQUEST ASSISTANCE</a>
+                    <a href="../assistance/">REQUEST ASSISTANCE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
+                    <a href="../">BACK TO MAIN SITE</a>
                 </li>
                 <li class="nav-item navbar-dropdown">
                     <!-- aria-expanded needs managed with Javascript -->
@@ -50,7 +50,7 @@
                 <h2 class="map-name">ASIA</h2>
             </a>
 
-            <a href="/maps/europe/" class="map-link">
+            <a href="/maps/latin-america/" class="map-link">
                 <img class="map-image" src="../assets/img/svg/latin-america-small.svg" alt="latin america map"/>
                 <h2 class="map-name">LATIN AMERICA</h2>
             </a>
