--- a/assistance/index.html
+++ b/assistance/index.html
@@ -16,13 +16,13 @@
 
             <ul class="nav-items">
                 <li class="nav-item">
-                    <a href="">TECHNICAL ASSISTANCE MAP</a>
+                    <a href="../maps/">TECHNICAL ASSISTANCE MAP</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">REQUEST ASSISTANCE</a>
+                    <a href="./">REQUEST ASSISTANCE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
+                    <a href="../">BACK TO MAIN SITE</a>
                 </li>
                 <li class="nav-item navbar-dropdown">
                     <!-- aria-expanded needs managed with Javascript -->
