--- a/maps/asia/index.html
+++ b/maps/asia/index.html
@@ -17,13 +17,13 @@
 
             <ul class="nav-items">
                 <li class="nav-item">
-                    <a href="">TECHNICAL ASSISTANCE MAP</a>
+                    <a href="../">TECHNICAL ASSISTANCE MAP</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">REQUEST ASSISTANCE</a>
+                    <a href="../../assistance/">REQUEST ASSISTANCE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
+                    <a href="../../">BACK TO MAIN SITE</a>
                 </li>
                 <li class="nav-item navbar-dropdown">
                     <!-- aria-expanded needs managed with Javascript -->
