--- a/admin/index.html
+++ b/admin/index.html
@@ -15,9 +15,14 @@
             </div>
 
             <ul class="nav-items">
-            
                 <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
+                    <a href="./maps/">VIEW REQUESTS</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./create-user/">CREATE USERS</a>
+                </li>                            
+                <li class="nav-item">
+                    <a href="#">BACK TO MAIN SITE</a>
                 </li>
                 
             </ul>
