--- a/admin/maps/asia/index.html
+++ b/admin/maps/asia/index.html
@@ -18,26 +18,16 @@
             </div>
 
             <ul class="nav-items">
-                <li class="nav-item">
-                    <a href="">TECHNICAL ASSISTANCE MAP</a>
-                </li>
-                <li class="nav-item">
-                    <a href="">REQUEST ASSISTANCE</a>
-                </li>
-                <li class="nav-item">
-                    <a href="">BACK TO MAIN SITE</a>
-                </li>
-                <li class="nav-item navbar-dropdown">
-                    <!-- aria-expanded needs managed with Javascript -->
-                    <button type="button" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
-                      EN
-                    </button>
-                    <ul class="dropdown-menu" id="langDropdown">
-                      <li><a href="#">EN-US</a></li>
-                      <li><a href="#">FR</a></li>
-                      <li><a href="#">ES</a></li>
-                    </ul>
-                  </li>
+              <li class="nav-item">
+                <a href="../">VIEW REQUESTS</a>
+            </li>
+            <li class="nav-item">
+                <a href="../../create-user/">CREATE USERS</a>
+            </li>                            
+            <li class="nav-item">
+                <a href="#">BACK TO MAIN SITE</a>
+            </li>
+                
             </ul>
 
         </nav>
