fix nav-links on home, maps, assistance pages

--- a/assistance/index.html
+++ b/assistance/index.html
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav-items navbar-nav">
                 <li class="nav-item">
-                    <a href="./maps/">TECHNICAL ASSISTANCE MAP</a>
+                    <a href="../maps/">TECHNICAL ASSISTANCE MAP</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./assistance/">REQUEST ASSISTANCE</a>
+                    <a href="../assistance/">REQUEST ASSISTANCE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./">BACK TO MAIN SITE</a>
+                    <a href="../">BACK TO MAIN SITE</a>
                 </li>
                 <!-- <li class="nav-item navbar-dropdown">
                     <button type="button" data-lang="en-gb" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
