implement mobile base styles for africa map page

--- a/maps/africa/index.html
+++ b/maps/africa/index.html
@@ -48,7 +48,7 @@
        
     </header>
     <main class="data-main">
-        <nav class="side-nav">
+        <nav class="map-nav side-nav">
             <ul>
                 <li class="nav-item">
                     <a href="/maps/africa/" class="active">AFRICA</a>
@@ -61,7 +61,22 @@
                 </li>
             </ul>
         </nav>
+        <nav class="map-nav top-nav">
+            <div class="nav-item">
+                <a href="/maps/africa/" class="active">AFRICA</a>
+            </div>
+        </nav>
+      
             <div id="container"></div>
+
+        <nav class="map-nav base-nav">
+            <div class="nav-item">
+                <a href="/maps/asia/" class="">ASIA</a>
+            </div>
+            <div class="nav-item">
+                <a href="/maps/africa/" class="">LATIN AMERICA</a>
+            </div>
+        </nav>
     </main>
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
