--- a/admin/index.html
+++ b/admin/index.html
@@ -35,10 +35,12 @@
         </div>
         <div class="home-info">
             <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
-            <p class="home-info-text">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                 elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                 aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            <p class="home-info-text">“To consult the B2B technical assistance requests submitted, 
+                ongoing and completed in SUN countries, please use the map below and select the 
+                countries or the filtering section for information on national or thematic requests. 
+                If you would like to provide technical assistance to a request indicated as submitted,
+                 please click on it and selection the option ‘provide support’. You can then contact
+                  directly the focal point of the company for an introductory call.”</p>
             <div class="home-info-links">
                 <a href="login/" class="home-info-link">LOGIN</a>
                 <a href="../" class="home-info-link">GOTO PUBLIC VIEW</a>
