--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
         </div>
         <div class="home-info">
             <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
-            <p class="home-info-text">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                 elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna 
-                 aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            <p class="home-info-text">To consult the B2B technical assistance requests submitted,
+                 ongoing and completed in SUN countries, please use the map below and select the
+                  countries or the filtering section for information on national or thematic requests. </p>
             <div class="home-info-links">
                 <a href="/assistance/" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
                 <a href="/maps/" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
