--- a/admin/maps/africa/index.html
+++ b/admin/maps/africa/index.html
@@ -49,7 +49,7 @@
       </nav>       
   </header>
     <main class="data-main">
-      <nav class="admin side-nav">
+      <nav class="admin map-nav side-nav">
         <ul>
           <li class="nav-item">
             <a href="./" class="active">AFRICA</a>
@@ -213,12 +213,12 @@
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/mapdata/custom/africa.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
-    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-    <script src="../../../assets/js/adminAfricaConfig.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>   
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-      <script type="text/javascript" src="../../../assets/js/script.js"></script>
+  <script src="../../../assets/js/adminAfricaConfig.js"></script>
+  <script type="text/javascript" src="../../../assets/js/script.js"></script>
     <script>
       $("#createSubmit").click((event) => {
         event.preventDefault();
