--- a/admin/maps/latin-america/index.html
+++ b/admin/maps/latin-america/index.html
@@ -49,7 +49,7 @@
     </nav>       
 </header>
     <main class="data-main">
-        <nav class="admin side-nav">
+        <nav class="admin map-nav side-nav">
             <ul>
                 <li class="nav-item">
                     <a href="../africa/" >AFRICA</a>
