remove data attritubes on admin view

--- a/admin/index.html
+++ b/admin/index.html
@@ -15,7 +15,7 @@
                  <img class="navbar-logo" src="../assets/img/svg/mainLogo.svg" alt="logo"/>
                 </a>
              
-                  <button class="custom-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="custom-toggler navbar-toggler" type="button"  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                 
