--- a/maps/asia/index.html
+++ b/maps/asia/index.html
@@ -24,6 +24,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav-items navbar-nav">
                 <li class="nav-item">
+                    <a href="../../admin/login/">LOGIN</a>
+                </li>
+                <li class="nav-item">
                     <a href="../../maps/">TECHNICAL ASSISTANCE MAP</a>
                 </li>
                 <li class="nav-item">
