--- a/admin/maps/asia/index.html
+++ b/admin/maps/asia/index.html
@@ -12,7 +12,7 @@
 </head>
 <body tabindex="-1">
   <header>
-    <nav class="navbar navbar-expand-md" aria-label="Main Navigation">         
+    <nav class="navbar admin navbar-expand-md" aria-label="Main Navigation">         
             <a  href="#" class="navbar-brand">
              <img class="navbar-logo" src="../../../assets/img/svg/mainLogo.svg" alt="logo"/>
             </a>
@@ -25,6 +25,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav-items navbar-nav">
+          <li class="nav-item">
+            <a href="../../../">BACK TO PUBLIC</a>
+        </li>
             <li class="nav-item">
                 <a href="../../maps/"> VIEW REQUESTS</a>
             </li>
