fix assistance title typo change employeecount input type to number

--- a/assistance/index.html
+++ b/assistance/index.html
@@ -94,7 +94,7 @@
           <div class="form-row">
             <div class="form-group">
               <label for="employeeCount">NUMBER OF EMPLOYEES </label>
-              <input name="employeeCount" id="employeeCount" type="text" />
+              <input name="employeeCount" id="employeeCount" type="number" />
             </div>
 
             <div class="form-group">
@@ -102,13 +102,7 @@
                 >ANNUAL PROFIT (INDICATE CURRENCY)</label
               >
               <div class="currency-group">
-                <input
-                  name="annualProfit"
-                  id="annualProfit"
-                  type="number"
-                  min="0"
-                  step="any"
-                />
+                <input name="annualProfit" id="annualProfit" type="number" min="0" step="any"/>
                 <select name="currency" id="currency" type="text"></select>
               </div>
             </div>
@@ -139,7 +133,7 @@
             </div>
           </div>
 
-          <h2 class="assistance-light-title">Technical Assisstance</h2>
+          <h2 class="assistance-light-title">Technical Assistance</h2>
           <div class="form-group">
             <label for="assistanceNeed"
               >Technical assistance needs of your company (select only one
