add navbar logo link on public pages

--- a/assistance/index.html
+++ b/assistance/index.html
@@ -15,12 +15,8 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-md" aria-label="Main Navigation">
-        <a href="#" class="navbar-brand">
-          <img
-            class="navbar-logo"
-            src="../assets/img/svg/mainLogo.svg"
-            alt="logo"
-          />
+        <a href="../" class="navbar-brand">
+          <img class="navbar-logo" src="../assets/img/svg/mainLogo.svg" alt="logo" />
         </a>
 
         <button
