--- a/admin/index.html
+++ b/admin/index.html
@@ -11,7 +11,7 @@
 <body tabindex="-1">
     <header>
         <nav class="navbar admin navbar-expand-md" aria-label="Main Navigation">         
-                <a  href="#" class="navbar-brand">
+                <a  href="./" class="navbar-brand">
                  <img class="navbar-logo" src="../assets/img/svg/mainLogo.svg" alt="logo"/>
                 </a>
              
