implement request modal button

--- a/admin/maps/asia/index.html
+++ b/admin/maps/asia/index.html
@@ -58,7 +58,7 @@
                     <a href="../africa/" >AFRICA</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./" class="">LATIN AMERICA</a>
+                    <a href="../latin-america/" class="">LATIN AMERICA</a>
                 </li>
                 <li class="nav-item">
                     <a href="../asia/" class="active">ASIA</a>
