implement map text on admin route

--- a/admin/maps/index.html
+++ b/admin/maps/index.html
@@ -56,6 +56,12 @@
                 <h1 class="admin-maps-welcome">Welcome, Admin 42334</h1>
                 <a href="../create-user/" class="create-user-link"></a>
             </div>
+            <p class="maps-info-text">To consult the B2B technical assistance requests submitted, 
+                ongoing and completed in SUN countries, please use the map below and select the 
+                countries or the filtering section for information on national or thematic requests. 
+                If you would like to provide technical assistance to a request indicated as submitted,
+                 please click on it and selection the option ‘provide support’. You can then contact
+                  directly the focal point of the company for an introductory call.</p>
             <h2 class="maps-title">SELECT REGION</h2>
             <div class="map-links">
                 <a href="/admin/maps/africa/" class="map-link">
