implement map texts for public view

--- a/maps/index.html
+++ b/maps/index.html
@@ -52,6 +52,9 @@
     <main class="maps-main">
         <div class="maps-content">
             <h2 class="maps-title">Select a region  to view technical requests</h2>
+            <p class="maps-info-text">To consult the B2B technical assistance requests submitted,
+                ongoing and completed in SUN countries, please use the map below and select the
+                 countries or the filtering section for information on national or thematic requests. </p>
             <div class="map-links">
                 <a href="/maps/africa/" class="map-link">
                     <img class="map-image" src="../assets/img/svg/africa-small.svg" alt="africa map"/>
