--- a/assistance/index.html
+++ b/assistance/index.html
@@ -97,6 +97,22 @@
           </div>
         </div>
 
+        <div class="col-sm-9  col-lg-6 d-flex ">
+          <img src="../assets/img/svg/flie-upload.svg" id="preview" class="placeholder-img">
+          <div id="msg"></div>
+            <input type="file" name="img[]" class="file" accept="image/*">
+            <div class="input-group my-3">
+              <input type="text" class="form-control" disabled placeholder="Upload File" id="file">
+              <div class="upload">
+                <label for="country">COMPANY LOGO</label>
+                <p class="">*The file size should not exceed 200kb.</p>
+                <button type="button" class="browse file-btn">Upload File</button>
+                <div class="invalid-feedback mt-2">Please choose an image 200Kb or less</div>
+              </div>
+            </div>
+        </div>
+
+
         <h2 class="assistance-light-title">
           Contact person for B2B TA request
         </h2>
@@ -321,6 +337,29 @@
 
     $("#country").append(...countryOptions);
     $("#currency").append(...currencyOptions);
+
+    $(document).on("click", ".browse", function() {
+  var file = $(this).parents().find(".file");
+  file.trigger("click");
+});
+$('input[type="file"]').change(function(e) {
+
+  console.log(e.target.files[0])
+  var fileName = e.target.files[0].name;
+  // $("#file").val(fileName);
+
+  if(e.target.files[0].size > 201000){
+   return $('.upload .invalid-feedback').toggle()
+  }
+else
+  var reader = new FileReader();
+  reader.onload = function(e) {
+    // get loaded data and render thumbnail.
+    document.getElementById("preview").src = e.target.result;
+  };
+  // read the image file as a data URL.
+  reader.readAsDataURL(this.files[0]);
+});
   </script>
 </body>
 
