add new text to admin and public home

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
         </div>
         <div class="home-info">
             <h1 class="home-info-title">Assisting Nutrition brands to feed the world.</h1>
+            <p class="home-info-text">
+                The SUN Business Network gathers SBN Global Members and members of SBN Country Networks based in the 
+                61 SUN Countries that want to support better nutrition for their consumers, their workforce and the 
+                societies they operate in. To support members of SBN Country Networks in providing safe nutritious food, 
+                the SBN facilitates the delivery of multifaceted business to business (B2B) technical assistance programmes
+                 around fortification, product reformulation, food safety, nutrition labelling, affordability, financial 
+                 inclusion, marketing and additional specific expertise owned by the SBN Global Members.
+            </p>
             <div class="home-info-links">
                 <a href="/assistance/" class="home-info-link">REQUEST TECHNICAL ASSISTANCE</a>
                 <a href="/maps/" class="home-info-link">VIEW TECHNICAL ASSISTANCE MAP</a>
